# vehicle-dsm

./: .gitignore  LICENSE  README.md
dataset/: download-full.sh  download-sample.sh  download.sh  lanes.xml  matrix.txt
gst-plugin/: .gitignore  .todo  AUTHORS  Makefile.am  README  autogen.sh  configure.ac
gst-plugin/gstreamer/: Makefile.am  gst-vehicle-dsm.c  gst-vehicle-dsm.h
gst-plugin/input/: 1_7_9_backup.txt  SNOOPERTEXT.xml  detection.xml  ground-truth.xml  model.svm
gst-plugin/rec/: recognition.cpp  recognition.h
gst-plugin/scripts/groundtruth/: build-xml.sh  make-all-xmls.sh
gst-plugin/scripts/gstreamer/: gst-player.sh
gst-plugin/src/: Makefile.am  lanes.h  vehicle-speed.cpp  vehicle-speed.h
gst-plugin/src/backgroundsub/: backgroundsub.cpp  backgroundsub.h  opencv_canny.cpp  opencv_canny.h
gst-plugin/src/common/: clanczos.cpp  clanczos.h  debug.h  dsm-common.h  font.cpp  font.h  fsaux.cpp  fsaux.h  hmatrix.h  image.cpp  image.h  index.h  lanczos.cpp  lanczos.h  shapes.cpp  shapes.h  straux.cpp  straux.h  term-colors.h  utils.cpp  utils.h  vector.cpp  vector.h  video-defs.h
gst-plugin/src/grouping/: grouping.cpp  grouping.h
gst-plugin/src/gtruth/: vehicles.cpp  vehicles.h
gst-plugin/src/klt/: Klt.ncb  base.h  convolve.cpp  convolve.h  error.cpp  error.h  klt.cpp  klt.h  klt_util.cpp  klt_util.h  pnmio.cpp  pnmio.h  pyramid.cpp  pyramid.h  selectGoodFeatures.cpp  trackFeatures.cpp  writeFeatures.cpp
gst-plugin/src/klt/matlab_interface/: klt_read_featuretable.m
gst-plugin/src/seg/: JUNK  toggle.cpp  toggle.h
gst-plugin/src/sift/: io.c  key.cpp  key.h  match.c  sfunc.cpp  sift.c
gst-plugin/src/snoopertext/: detection-minetto.cpp  detection-minetto.h  detection-zheng.cpp  detection-zheng.h  snoopertext.cpp  snoopertext.h
gst-plugin/src/speed/: speed.cpp  speed.h
gst-plugin/src/svm/: labels.txt  range1  svm-predict  svm-predict.c  svm-scale  svm-train  svm.cpp  test.sh  train.sh
gst-plugin/src/swt/: detection-swt.cpp  detection-swt.h  swt-wrapper.h
gst-plugin/src/thog/: thog.cpp  thog.h
gst-plugin/tools/: .gitignore  Makefile.am  inspect.sh  run-all.sh  run-dsm.sh
gst-plugin/tools/groundtruth/: analyzeLog.py  computeFinalResult.py  cvplayer.py
gst-plugin/tools/input/: .gitignore
gst-plugin/tools/perspective/: .gitignore  Makefile.am  perspective-transform.cpp
gst-plugin/tools/train/: .gitignore  Makefile.am  png.cpp  svm-train.cpp  train.cpp
